# NotToDo

./: .gitignore  README.md  dev.sh  pyproject.toml
app/: config.py
app/archtool_conf/: bundle_project.py
backend/: alembic.ini  dev.sh  prod.sh
backend/alembic/: env.py
backend/alembic/versions/: e83097994acf_initial.py  f8662631c720_initial.py
backend/app/: config.py
backend/app/archtool_conf/: bundle_project.py  custom_layers.py
backend/app/core_integrations/: reg_deps.py
backend/app/todos/: controllers.py  dms.py  dtos.py  interfaces.py  models.py  repos.py  services.py
backend/app/users/: controllers.py  dms.py  dtos.py  interfaces.py  models.py  repos.py  services.py
backend/entrypoints/: run.py
entrypoints/: run.py
