[project]
name = "nottodo"
version = "0.1.0"
description = "NotToDo backend application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.14.1",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "archtool==2.1.1",
    "email-validator>=2.3.0",
    "fastapi>=0.138.0",
    "furl>=2.1.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pytz>=2026.2",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn>=0.49.0",
    "web-fractal>=0.0.1",
]

[tool.uv]
package = false
